# genesis-zero-bot

./: .gitignore  AGENTS.md  BOOTSTRAP.md  HEARTBEAT.md  IDENTITY.md  KNOWLEDGE-GRAPH-EVALUATION.md  README.md  REPO-CATALOG.md  SOUL.md  TOOLS.md  USER.md  big_space_scene.json  community-alchemy-playbook.md  construction-3dp-ecosystem.md  drone-swarm-regenerative-communities.md  extract_glasswing.py  force_directed_graph.json  process_ste100.py  process_ste100_v2.py  process_ste100_v3.py  process_ste100_v4.py  send_telegram.py  sync-pull.sh  sync-push.sh  zero-cost-infrastructure-design-MUTATED.md  zero-cost-infrastructure-design-OPTIMIZED.md  zero-cost-infrastructure-design.md
.ralph/: current-events  current-loop-id  events-20260310-073114.jsonl  history.jsonl
archive/: README.md
artifacts/: xtract-3d-viewer.html  xtract-v2-embedded.html  xtract-viewer.html
big_space_threejs_test/: index.html
digital-twin-fragments/: fragment_02_relationships.md  fragment_03_time_and_change.md  fragment_04_uncertainty_ignorance.md  fragment_05_social_systems.md
docs/: ENCODING-SYSTEM-PDD.md  GENESIS-BRAIN-ARCHITECTURE.md  GENESIS-BRAIN-LIGHT-DESIGN.md  LIVING-BOOK-MANIFESTO.md  LIVING-BOOK-TECHNICAL-ROADMAP.md  RADICLE-NOTES-REPO-AFTERACTION.md  REGEN-TRIBE-KNOWLEDGE-SYSTEM.md  (+6 more)
regen-app-stack/pwa-starter/: Cargo.toml  Dockerfile  README.md  Trunk.toml  build.rs  index.html
regen-app-stack/pwa-starter/public/: manifest.json  sw.js
regen-app-stack/pwa-starter/src/: main.rs
skills/regen-cas/: Cargo.toml  README.md  SKILL.md  SPEC.md
skills/regen-cas/src/: main.rs
(+325 files in other folders)
