[package]
name = "regen-cas"
version = "0.1.0"
edition = "2021"
description = "Content-Addressable Storage for Regen Tribe"

[[bin]]
name = "regen-cas"
path = "src/main.rs"

[dependencies]
opendal = { version = "0.45", features = ["services-fs", "services-s3"] }
twox-hash = "2.1"
lz4-flex = "0.11"
hex = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
chrono = "0.4"
walkdir = "2"

[profile.release]
lto = true
codegen-units = 1
strip = true
